# lithosonic

./: .coveragerc  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  COMPLETION_FINAL.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_advanced_tests.sh  run_lithosonic.sh  run_simple_tests.sh  setup.cfg  setup.py  upload_lithosonic.py  upload_lithosonic_fixed.py
alert/: README.md  __init__.py  neyman_pearson.py  notifications.py  thresholds.py
docs/: LITHO-SONIC_RESERCH_PAPER.docx
docs/api/: README.md
docs/appendices/: A_instrument_specs.md  B_biot_frequency_derivation.md  C_operational_thresholds.md  D_data_availability.md  E_author_contributions.md
docs/deployment/: README.md
docs/theory/: README.md
instruments/: README.md  __init__.py  calibration.py  infrasound_array.py  litho_geo_v2.py  tiltmeter.py
litho_physics/: README.md  __init__.py  attenuation.py  biot.py  emission.py  fracture_resonance.py  impedance.py  litho_physics.py  lsi.py  lsi_advanced.py  lsi_advanced_v2.py  lsi_advanced_v2_no_numpy.py  lsi_final.py  lsi_hybrid.py  lsi_hybrid_v2.py  lsi_optimized.py
notebooks/: 01_biot_theory_primer.ipynb  02_five_parameters_tutorial.ipynb  03_lsi_computation.ipynb  04_kilauea_case_study.ipynb  05_campi_flegrei_case_study.ipynb  06_geysers_case_study.ipynb  07_statistical_framework.ipynb
pipeline/: README.md  __init__.py  harmonic.py  ingest.py  inversion.py  spectral.py
reports/alerts/: lithosonic_alerts_20260310_192819.txt
reports/daily/: lithosonic_daily.txt  lithosonic_daily_reports.txt
reports/monthly/: lithosonic_monthly_202603.txt
reports/weekly/: lithosonic_weekly_202610.txt
scripts/: backup.sh  generate_api_docs.py  generate_daily_report.py  generate_master_report.py  generate_reports.py  init_db.py  restore.sh  test_sensors.py
tests/: temporal_stability_final.py  temporal_stability_optimized.py  temporal_stability_test.py  test_attenuation.py  test_biot.py  test_emission.py  test_fracture_resonance.py  test_impedance.py  test_lsi.py  test_lsi_simple.py  test_pipeline.py
tests/simple/: test_accuracy.py  test_biot_simple.py  test_boundaries.py  test_fracture_simple.py  test_integration.py  test_killer.py  test_lsi_simple.py  test_performance.py  test_phantom.py
validation/: README.md
validation/benchmarks/: lead_time_analysis.py  lsi_accuracy.py
validation/sites/campi_flegrei/: config.yaml
validation/sites/chicxulub/: config.yaml
validation/sites/geysers/: config.yaml
validation/sites/kilauea_lerz/: config.yaml
validation/sites/parkfield/: config.yaml
validation/sites/rhine_graben/: config.yaml
