[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithosonic"
version = "1.0.0"
description = "Lithospheric Resonance & Infrasonic Geomechanical Observatory"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Samir Baladi", email = "gitdeeper@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "obspy>=1.4.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/gitdeeper8/lithosonic"
Documentation = "https://lithosonic.netlify.app/docs"
Repository = "https://github.com/gitdeeper8/lithosonic.git"
DOI = "https://doi.org/10.5281/zenodo.18931304"

[project.scripts]
lithosonic-serve = "lithosonic.cli.serve:main"
lithosonic-collect = "lithosonic.cli.collect:main"
lithosonic-process = "lithosonic.cli.process:main"
